--- a/src/styles/sass/pages/_principale.scss
+++ b/src/styles/sass/pages/_principale.scss
@@ -3,104 +3,160 @@
   border-radius: 0.5rem;
   margin: 0 auto;
   width: 80%;
+}
 
-  &__content {
-    &__menu,
-    &__first,
-    &__second {
-      margin: 0 auto;
-      width: 80%;
-      padding: 3rem 0;
-    }
-    &__menu {
-      height: 5vh;
-      background-image: url("../assets/CatwikiLogo.svg");
-      background-repeat: no-repeat;
-      background-position: left 50%;
-    }
+.main__content {
+  &__menu,
+  &__first,
+  &__second,
+  &__third {
+    margin: 0 auto;
+    width: 80%;
+    padding: 3rem 0;
+  }
+  &__menu {
+    height: 5vh;
+    background-image: url("../assets/CatwikiLogo.svg");
+    background-repeat: no-repeat;
+    background-position: left 50%;
+  }
 
-    &__first {
-      width: 80%;
-      border-radius: 2rem 2rem 0 0;
-      background-image: url("../assets/HeroImagelg.png");
-      background-size: auto 100%;
-      background-position: right;
-      background-repeat: no-repeat;
-      height: 60vh;
+  &__first {
+    width: 80%;
+    border-radius: 2rem 2rem 0 0;
+    background-image: url("../assets/HeroImagelg.png");
+    background-size: auto 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 60vh;
+
+    & div {
+      width: 60%;
+      display: flex;
+      flex-direction: column;
+      padding: 5rem;
 
       & div {
-        width: 60%;
-        display: flex;
-        flex-direction: column;
-        padding: 5rem;
-
-        & div {
-          margin-right: auto;
-          color: var(--clr-primary-100);
-          width: 100%;
-          padding: 0;
-        }
-      }
-      //   logo
-      & div:nth-child(1) {
-        & img {
-          width: 50%;
-          filter: brightness(0) invert(1);
-        }
-      }
-      //   message
-      & div:nth-child(2) {
-        width: 25ch;
-      }
-      //   search
-      & div:nth-child(3) {
-        position: relative;
-        margin-top: 2rem;
-        width: 80%;
-
-        & span {
-          position: absolute;
-          color: var(--clr-neutral-700);
-          top: 30%;
-          right: 8%;
-        }
-      }
-      & input {
-        border: none;
-        border-radius: 5rem;
+        margin-right: auto;
+        color: var(--clr-primary-100);
         width: 100%;
-        padding: 1.5em;
+        padding: 0;
+      }
+    }
+    //   logo
+    & div:nth-child(1) {
+      & img {
+        width: 50%;
+        filter: brightness(0) invert(1);
+      }
+    }
+    //   message
+    & div:nth-child(2) {
+      width: 25ch;
+    }
+    //   search
+    & div:nth-child(3) {
+      position: relative;
+      margin-top: 2rem;
+      width: 80%;
 
-        background-color: var(--clr-primary-100);
-        font-weight: var(--fw-medium);
+      & span {
+        position: absolute;
+        color: var(--clr-neutral-700);
+        top: 30%;
+        right: 8%;
+      }
+    }
+    & input {
+      border: none;
+      border-radius: 5rem;
+      width: 100%;
+      padding: 1.5em;
 
-        &::placeholder {
-          opacity: 1;
-          text-transform: capitalize;
-          color: var(--clr-neutral-700);
+      background-color: var(--clr-primary-100);
+      font-weight: var(--fw-medium);
+
+      &::placeholder {
+        opacity: 1;
+        text-transform: capitalize;
+        color: var(--clr-neutral-700);
+      }
+    }
+  }
+
+  &__second {
+    background-color: var(--clr-primary-200);
+    border-radius: 0 0 2rem 2rem;
+    color: var(--clr-neutral-700);
+    padding: 2rem 5rem;
+
+    & .message:nth-child(1) {
+      text-transform: capitalize;
+      font-weight: var(--fw-medium);
+
+      & span {
+        position: relative;
+
+        &::after {
+          content: "";
+          position: absolute;
+          width: 130%;
+          height: 0.2rem;
+          bottom: -0.8rem;
+          left: 0;
+          background-color: var(--clr-neutral-700);
+          border-radius: 5rem;
         }
       }
     }
+    & .message:nth-child(2) {
+      margin-top: 2rem;
+      font-weight: var(--fw-bold);
+      font-size: var(--fs-xxxl);
+      line-height: 3rem;
+      width: 15ch;
+    }
+  }
 
-    &__second {
-        background-color: var(--clr-primary-200);
-        border-radius: 0 0 2rem 2rem;
-        color: var(--clr-neutral-700);
-        padding : 2rem 5rem;
+  &__third {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
+  }
 
+  &__third div {
+    color: var(--clr-neutral-700);
+    display: flex;
+    align-items: center;
+    &:nth-child(1) {
+      text-transform: capitalize;
+      font-size: var(--fs-xxxl);
+      font-weight: var(--fw-bold);
+      text-transform: capitalize;
+      width: 15ch;
+    }
 
-        & .message:nth-child(1) {
-            text-transform: capitalize;
-            font-weight: var(--fw-medium);
-        }
-        & .message:nth-child(2) {
-            font-weight: var(--fw-bold);
-            font-size: var(--fs-xxxl);
-            line-height: 3rem;
-            width : 15ch;
-        }
+    &:nth-child(2) {
+      grid-row: 2 / 3;
+      font-size: var(--fs-m);
+      font-weight: var(--fw-medium);
+      text-transform: capitalize;
+      width: 40ch;
+    }
 
-        
+    &:nth-child(3) {
+      font-size: var(--fs-l);
+      grid-row: 3 / 4;
+      text-transform: uppercase;
+      color: var(--clr-neutral-350);
+      font-weight: var(--fw-bold);
+
+      & span {
+        font-size: var(--fs-xxl);
+        font-weight: var(--fw-bold);
+        margin-left: 1rem;
+      }
     }
   }
 }
