--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,7 +11,7 @@
   --fs-m: 1rem;
   --fs-l: 1.2rem;
   --fs-xl: 1.5rem;
-  --fs-xxl: 2rem;
+  --fs-xxl: 2.3rem;
   --fs-xxxl: 2.5rem;
   --fw-light: 300;
   --fw-regular: 400;
@@ -631,6 +631,7 @@ body {
   width: 15ch;
 }
 .main__content__third {
+  margin-top: 2rem;
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
@@ -639,14 +640,30 @@ body {
 .main__content__third div {
   color: var(--clr-neutral-700);
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+}
+.main__content__third div:nth-child(1), .main__content__third div:nth-child(2), .main__content__third div:nth-child(3) {
+  margin-left: 15%;
 }
 .main__content__third div:nth-child(1) {
   text-transform: capitalize;
-  font-size: var(--fs-xxxl);
+  font-size: var(--fs-xxl);
   font-weight: var(--fw-bold);
   text-transform: capitalize;
   width: 15ch;
+  align-items: flex-end;
+  position: relative;
+  margin-top: 2rem;
+}
+.main__content__third div:nth-child(1)::after {
+  position: absolute;
+  content: "";
+  height: 0.2rem;
+  width: 4rem;
+  background-color: var(--clr-neutral-700);
+  top: 1rem;
+  left: 0;
+  border-radius: 2rem;
 }
 .main__content__third div:nth-child(2) {
   grid-row: 2/3;
@@ -654,6 +671,7 @@ body {
   font-weight: var(--fw-medium);
   text-transform: capitalize;
   width: 40ch;
+  align-items: center;
 }
 .main__content__third div:nth-child(3) {
   font-size: var(--fs-l);
@@ -666,6 +684,26 @@ body {
   font-size: var(--fs-xxl);
   font-weight: var(--fw-bold);
   margin-left: 1rem;
+}
+.main__content__third div:nth-child(4) {
+  grid-row: 2/4;
+  grid-column: 2/3;
+  justify-content: flex-end;
+}
+.main__content__third div:nth-child(4) img {
+  width: 65%;
+}
+.main__content__third div:nth-child(5) {
+  justify-content: flex-end;
+}
+.main__content__third div:nth-child(5) img {
+  width: 90%;
+}
+.main__content__third div:nth-child(6) {
+  grid-row: 1/4;
+}
+.main__content__third div:nth-child(6) img {
+  width: 75%;
 }
 
 .carousel {
@@ -711,6 +749,59 @@ body {
   border-radius: 0.5rem;
   background-color: var(--clr-neutral-400);
   transform: translateZ(-1px);
+}
+
+.footer {
+  width: 86%;
+  margin: 0 auto;
+  height: 12vh;
+  background-color: var(--clr-neutral-900);
+  border-radius: 2rem 2rem 0 0;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--clr-primary-100);
+  font-size: var(--fs-l);
+}
+.footer img {
+  filter: brightness(0) invert(1);
+  margin-left: 8%;
+}
+.footer span:nth-child(1) {
+  margin-right: 0.5rem;
+}
+.footer span:nth-child(2) {
+  text-decoration: underline;
+  font-weight: var(--fw-bold);
+}
+
+.list {
+  position: absolute;
+  bottom: calc(-100% - 3em - 1rem);
+  background-color: var(--clr-primary-100);
+  max-height: 15vh;
+  width: 100%;
+  border-radius: 1rem;
+  color: var(--clr-neutral-700);
+  font-weight: var(--fw-medium);
+  overflow: auto;
+  mask-image: radial-gradient(circle, white 100%, black 100%);
+}
+.list::-webkit-scrollbar {
+  width: 0.3em;
+}
+.list::-webkit-scrollbar-thumb {
+  border-radius: 100vw;
+  height: 1em;
+  background: var(--clr-neutral-350);
+}
+.list::-webkit-scrollbar-track {
+  margin-block: 1em;
+  padding-right: 2rem;
+}
+.list__item {
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
