--- a/src/styles/sass/abstracts/_colors.scss
+++ b/src/styles/sass/abstracts/_colors.scss
@@ -1,12 +1,13 @@
 $colors: (
   primary: (
     100: #ffffff,
+    150: #9797971a,
     200: #e3e1dc,
   ),
   neutral: (
     300: #e0e0e0,
-    350 : #29150799,
-    400 : #DEC68B,
+    350: #29150799,
+    400: #dec68b,
     700: #291507,
     800: #050709,
     900: #000000,
