--- a/src/styles/sass/pages/_description.scss
+++ b/src/styles/sass/pages/_description.scss
@@ -2,7 +2,8 @@
   margin: 0 auto;
   width: 80%;
   padding: 3rem 0;
-
+  color: var(--clr-neutral-700);
+  
   &__first-section {
     display: flex;
     align-items: flex-start;
