--- a/src/styles/sass/components/_carousel.scss
+++ b/src/styles/sass/components/_carousel.scss
@@ -1,13 +1,37 @@
 .carousel {
-  margin-top: 3rem;
+  margin: 3rem 0;
 
   &__list {
-    display: flex;
-    gap: 1rem;
-    flex: 1;
-    justify-content: space-between;
-
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 22vh);
+    grid-template-rows: 1;
+    grid-auto-flow: row;
+    gap: calc((100% - 4 * 22vh) / 4);
+    margin-left: 3rem;
     position: relative;
+
+    &__img--container:nth-child(1) {
+      position: relative;
+      transform-style: preserve-3d;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 50%;
+        height: 90%;
+        top: 5%;
+        left: -7%;
+        border-radius: 0.5rem;
+        background-color: var(--clr-neutral-400);
+        transform: translateZ(-1px);
+      }
+    }
+
+    &__item {
+      object-fit: cover;
+      width: 100%;
+      height: 22vh;
+      border-radius: 1rem;
+    }
 
     &__seemore {
       position: absolute;
