--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -734,6 +734,7 @@ body {
   margin: 0 auto;
   width: 80%;
   padding: 3rem 0;
+  color: var(--clr-neutral-700);
 }
 .description__first-section {
   display: flex;
@@ -742,14 +743,37 @@ body {
 }
 
 .carousel {
-  margin-top: 3rem;
+  margin: 3rem 0;
 }
 .carousel__list {
-  display: flex;
-  gap: 1rem;
-  flex: 1;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 22vh);
+  grid-template-rows: 1;
+  grid-auto-flow: row;
+  gap: calc((100% - 88vh) / 4);
+  margin-left: 3rem;
   position: relative;
+}
+.carousel__list__img--container:nth-child(1) {
+  position: relative;
+  transform-style: preserve-3d;
+}
+.carousel__list__img--container:nth-child(1)::before {
+  position: absolute;
+  content: "";
+  width: 50%;
+  height: 90%;
+  top: 5%;
+  left: -7%;
+  border-radius: 0.5rem;
+  background-color: var(--clr-neutral-400);
+  transform: translateZ(-1px);
+}
+.carousel__list__item {
+  object-fit: cover;
+  width: 100%;
+  height: 22vh;
+  border-radius: 1rem;
 }
 .carousel__list__seemore {
   position: absolute;
@@ -868,8 +892,16 @@ body {
   flex-direction: column;
   gap: 1.5rem;
 }
+.info-card__general p {
+  width: 50ch;
+}
 .info-card__char1 {
+  display: flex;
   text-transform: capitalize;
+  gap: 0.5rem;
+}
+.info-card__char1 p {
+  font-weight: var(--fw-semi-bold);
 }
 .info-card__char2 {
   text-transform: capitalize;
@@ -879,8 +911,7 @@ body {
   width: 80%;
 }
 .info-card__char2 h4 {
-  width: 25%;
-  margin-right: 2rem;
+  width: 30%;
 }
 .info-card__char2 span {
   width: 4rem;
@@ -890,6 +921,22 @@ body {
 }
 .info-card__char2 span[activated-state=true] {
   background-color: var(--clr-neutral-350);
+}
+
+.photos {
+  margin: 3rem 0;
+}
+.photos__gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.photos__gallery__item {
+  width: 17rem;
+  height: 17rem;
+  border-radius: 1rem;
+  background-color: var(--clr-neutral-700);
 }
 
 /*# sourceMappingURL=style.css.map */
