--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -836,16 +836,19 @@ body {
 }
 
 .list {
-  position: absolute;
-  bottom: calc(-100% - 3em - 6rem);
+  display: none;
+  margin-top: 1rem;
   background-color: var(--clr-primary-100);
   max-height: 20vh;
-  width: 100%;
+  width: 80%;
   border-radius: 1rem;
   color: var(--clr-neutral-700);
   font-weight: var(--fw-medium);
   overflow: auto;
   mask-image: radial-gradient(circle, white 100%, black 100%);
+}
+.list[display-state=true] {
+  display: block;
 }
 .list::-webkit-scrollbar {
   width: 0.3em;
