--- a/src/styles/sass/components/_otherphotos.scss
+++ b/src/styles/sass/components/_otherphotos.scss
@@ -11,6 +11,7 @@
       height: 17rem;
       border-radius: 1rem;
       background-color: var(--clr-neutral-700);
+      object-fit: cover;
     }
   }
 }
