--- a/src/styles/sass/pages/_description.scss
+++ b/src/styles/sass/pages/_description.scss
@@ -3,10 +3,27 @@
   width: 80%;
   padding: 3rem 0;
   color: var(--clr-neutral-700);
-  
+  position: relative;
+
+
   &__first-section {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+  }
+
+  &__back-home {
+    position: absolute;
+    right : -5%;
+    top : -2rem;
+    font-size: var(--fs-xxxl);
+    font-weight: var(--fw-semi_bold);
+    transition: all var(--duration) linear;
+    cursor : pointer;
+
+
+    &:hover {
+      color : var(--clr-neutral-350)
+    }
   }
 }
